--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Wath Sets on Stream from tourneys around the world"
     />
+    <meta name="keywords" content="Smash, Smash ultimate, stream, sets, games, characters">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sets on Stream</title>
+    <meta property="og:image" content="https://jenghissb.github.io/setsonstream/logo512.png">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
