--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Wath Sets on Stream from tourneys around the world"
+      content="Watch Sets on Stream from tourneys around the world"
     />
     <meta name="keywords" content="Smash, Smash ultimate, stream, sets, games, characters">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -27,7 +27,9 @@
     -->
     <title>Sets on Stream</title>
     <meta property="og:image" content="https://jenghissb.github.io/setsonstream/logo512.png">
-
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Sets on Stream">
+    <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
