--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sets on Stream">
     <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
