--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sets on Stream</title>
-    <meta property="og:image" content="https://jenghissb.github.io/setsonstream/logo512.png">
+    <meta property="og:image" content="https://setsonstream.tv/logo512.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sets on Stream">
     <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world">
+    <base href="/" />
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
