Some seo updates

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Watch Sets on Stream from tourneys around the world"
+      content="Stream live and recent recent matches from fighting game tournaments: Smash Ultimate, SF6, Rivals 2, Tekken 8, and more."
     />
     <meta name="keywords" content="Smash, Smash ultimate, stream, sets, games, characters">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -25,8 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sets on Stream</title>
-    <meta property="og:image" content="https://setsonstream.tv/logo512.png">
+    <title>Setsonstream.tv - Watch Live & Recent Fighting Game Tournament Sets</title>
+    <meta property="og:image" content="https://setsonstream.tv/logoOg.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sets on Stream">
     <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world">
