--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Setsonstream.tv - Watch Live & Recent Fighting Game Tournament Sets</title>
+    <title>Watch Live & Recent Fighting Game Tournament Sets</title>
     <meta property="og:image" content="https://setsonstream.tv/logoOg.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sets on Stream">
