sets on stream 2.0

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Stream live and recent recent matches from fighting game tournaments: Smash Ultimate, SF6, Rivals 2, Tekken 8, and more."
+      content="Stream live and recent matches from fighting game tournaments: Smash Ultimate, SF6, Rivals 2, Tekken 8, and more."
+      key="description"
+      data-rh="true"
     />
     <meta name="keywords" content="Smash, Smash ultimate, stream, sets, games, characters">
     <!--
@@ -29,11 +31,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Watch Live & Recent Fighting Game Tournament Sets</title>
+    <title>Sets on Stream</title>
     <meta property="og:image" content="https://setsonstream.tv/logoOg.png">
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Sets on Stream">
-    <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world">
+    <meta name="twitter:title" content="Sets on Stream" key="twittertitle" data-rh="true">
+    <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world" key="twitterdescription" data-rh="true">
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
