--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       key="description"
       data-rh="true"
     />
-    <meta name="keywords" content="Smash, Smash ultimate, stream, sets, games, characters">
+    <meta name="keywords" content="Smash Ultimate, SSBU, competitive Smash, Smash tournaments, fighting game streams, Smash sets, tournament matches, esports, characters, gameplay, live matches" data-rh="true" key="keywords">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -49,15 +49,5 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
