--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sets on Stream</title>
-    <meta property="og:image" content="https://setsonstream.tv/logoOg.png">
+    <meta property="og:image" content="https://setsonstream.tv/logoOg.png" data-rh="true">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Sets on Stream" key="twittertitle" data-rh="true">
     <meta name="twitter:description" content="Watch Sets on Stream from tourneys around the world" key="twitterdescription" data-rh="true">
